--- a/templates/index.html
+++ b/templates/index.html
@@ -68,7 +68,7 @@
         <div class="products">
             {% for product in products %}
                 <div class="product-card">
-                    <img src="{{ url_for('static', filename='images/' + product.image) }}" alt="{{ product.name }}">
+                    <img src="{{ url_for('static', filename='uploads/' + product.image) }}" alt="{{ product.name }}">
                     <a href="{{ url_for('main.product_detail', product_id=product.id) }}">عرض التفاصيل</a>
                 </div>
             {% endfor %}
