--- a/templates/product_detail.html
+++ b/templates/product_detail.html
@@ -10,7 +10,7 @@
 <body>
 
     <div class="product-container">
-        <img class="product-image" src="{{ url_for('static', filename='images/' + product.image) }}" alt="{{ product.name }}">
+        <img class="product-image" src="{{ url_for('static', filename='uploads/' + product.image) }}" alt="{{ product.name }}">
 
         <h2 class="product-title">{{ product.name }}</h2>
 
